fix inline script for epoch_phy

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
@@ -260,6 +260,8 @@ mymcmc.run(3000)
 
 \subsection*{Results}
 
+{\it Example results have around found in {\tt output\_example/epoch.*} }
+
 The {\tt mnJointConditionalAncestralState} monitor above created a states file.
 Each row in the states file lists the joint sample of ancestral states conditioned on the tip values for the whole tree.
 Each column corresponds to the phylogenetic node index for that particular MCMC sample.
