--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -8,7 +8,7 @@ This tutorial provides a brief background in some of these models, then describe
 
 \section{Overview of the Dispersal-Extinction-Cladogenesis model}
 
-\subsection*{Range characters}
+\subsection*{Discrete range characters}
 
 The Dispersal-Extinction-Cladogenesis (DEC) models range evolution as a discrete-valued process \citep{ree05, ree08}.
 DEC interprets taxon ranges as presence-absence data, that is, where a species is observed or not observed across multiple discrete areas.
@@ -241,7 +241,16 @@ Thus, selecting the discrete areas for a DEC analysis should be done with regard
 
 {\bf \framebox{?} For three areas, there are three narrow, four widespread, 18 subset sympatric events and 12 allopatric cladogenesis events. What proportion of terms in the cladogenesis matrix are zero?}
 
+\subsection*{Recommended tutorials}
 
+The {\bf Historical Biogeography} tutorial will assume the reader has completed the following \RevBayes tutorials
+
+\begin{itemize}
+\item {\bf \Rev Basics}
+\item {\bf Molecular Models of Character Evolution}
+\item {\bf Running and Diagnosing an MCMC Analysis}
+\item {\bf Divergence Time Estimation and Node Calibrations}
+\end{itemize}
 
 %\begin{figure}[H]
 %\centering
