--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
@@ -5,10 +5,10 @@
 \section{Simple DEC analysis} \label{sec:bg_simple}
 
 
-The tutorials will reconstruct the ancestral ranges of the silversword alliance (Tribe {\it Madiinae}), a diverse clade of about 50 species.
+The following series of tutorials will reconstruct the ancestral ranges of the silversword alliance (Tribe {\it Madiinae}), a young and diverse clade of about 50 species \citep{carlquistXX}.
 Although silverswords are endemic to Hawaii, they are nested within a larger clade alongside tarweeds, which are native to the California coastline.
-The size and age of the clade, combined with our knowledge of Hawaiian island formation, makes it an ideal system to explore concepts in historical biogeography and phylogeny.
-[ Much of this work draws on insights coming from Baldwin and colleagues. ]
+The size and age of the silversword clade, combined with our knowledge of Hawaiian island formation, makes it an ideal system to explore concepts in historical biogeography and phylogeny.
+For further reading, consult: \citet{baldwin,XX,XX,XX}.
  
 \begin{figure}[!ht]
 \centering
